--- a/index.html
+++ b/index.html
@@ -2,28 +2,130 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Belajar Membuat CV dengan Bootstrap">
-    <meta name="keywords" content="HTML, CSS3, JavaScript">
-    <meta name="author" content="Syam Aziz">
-    <title>CV with Bootstrap v5.3.1</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Belajar Membuat CV dengan Bootstrap">
+  <meta name="keywords" content="HTML, CSS3, JavaScript">
+  <meta name="author" content="Syam Aziz">
+  <title>Agung Nugraha Portofolio</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <!-- My CSS -->
-    <link rel="stylesheet" href="style.css">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+
+  <!-- My CSS -->
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Viga:wght@100;400;600&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <h1>Hello, world !</h1>
+  <div class="container p-5">
+    <div class="card shadow">
+      <div class="card-body">
+        <!-- Baris 1 -->
+        <section class="baris1">
+          <div class="row justify-content-evenly">
+            <div class="col-md-3">
+              <img src="img/profile_edit.jpg" alt="profile_edit">
+            </div>
+
+            <div class="col-md-5 pt-4">
+              <p><i class="bi bi-telephone"></i> +6281295045973</p>
+              <p><i class="bi bi-envelope-at"></i> an739796@gmail.com</p>
+              <p><i class="bi bi-house"></i> Jl. Terusan Kapten Halim, Salamjaya, Pondoksalam</p>
+            </div>
+          </div>
+        </section>
+        <!-- Akhir Baris 1 -->
+
+        <!-- Baris 2 -->
+        <section class="baris2">
+          <div class="row justify-content-center">
+
+            <div class="col-md-4">
+              <div class="nama mt-3 te">
+                <h2>Agung Nugraha</h2>
+                <p>Guru Bahasa Inggris</p>
+              </div>
+
+              <div class="tentang position-relative">
+                <hr>
+                <h3>Tentang saya</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, aut voluptatem nemo eos modi
+                  temporibus
+                  ab, dolores laudantium nam nostrum repudiandae hic consequatur? Necessitatibus maiores dignissimos
+                  vel,
+                  debitis porro est.</p>
+              </div>
+
+              <div class="ahli position-relative">
+                <hr>
+                <h3>Keahlian</h3>
+                <ul>
+                  <li>Media Sosial</li>
+                  <li>Baris Berbaris</li>
+                  <li>Desain PicArt</li>
+                  <li>Menggambar</li>
+                </ul>
+              </div>
+
+              <div class="sertifikat position-relative">
+                <hr>
+                <h3>Sertifikat</h3>
+                <h5>Senior Ahli Grafis</h5>
+                <p class="sp">Larana, Inc.</p>
+                <p class="mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, tenetur!</p>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="pengalaman position-relative">
+                <hr>
+                <h3>Pengalaman</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, blanditiis in aperiam vero
+                  excepturi ab, quos commodi ut nesciunt fugiat culpa! Voluptate veritatis neque laudantium distinctio
+                  alias sequi quisquam mollitia adipisci, dicta velit est doloremque ipsa quasi officia iste quaerat
+                  laboriosam itaque architecto ipsam vitae harum pariatur unde! Blanditiis, soluta.</p>
+              </div>
+
+              <div class="pendidikan position-relative">
+                <hr>
+                <h3>Pendidikan</h3>
+                <div class="row">
+                  <div class="col">
+                    <p>2013 - 2015</p>
+                    <p>MAN Purwakarta</p>
+                    <br>
+                    <p>2015-2019</p>
+                    <p>STKIP Subang</p>
+                  </div>
+
+                  <div class="col">
+                    <p>Jurusan</p>
+                    <p>IPA</p>
+                    <br>
+                    <p>S1 Pendidikan</p>
+                    <p>Bahasa Inggris</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Akhir Baris 2 -->
+
+      </div>
+    </div>
+  </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
