Merapihkan beberapa posisi konten

--- a/index.html
+++ b/index.html
@@ -25,99 +25,99 @@
 <body>
   <div class="container p-5">
     <div class="card shadow">
-      <div class="card-body">
-        <!-- Baris 1 -->
-        <section class="baris1">
-          <div class="row justify-content-evenly">
-            <div class="col-md-3">
-              <img src="img/profile_edit.jpg" alt="profile_edit">
-            </div>
+      <div class="card-body CV px-1 py-5">
+        <div class="row justify-content-evenly">
+          <div class="col-md-3">
+            <img src="img/profile_edit.jpg" alt="profile_edit">
+          </div>
 
-            <div class="col-md-5 pt-4">
+          <div class="col-md-5">
+            <div class="alamat position-relative">
+              <hr>
+              <h3>Kontak</h3>
               <p><i class="bi bi-telephone"></i> +6281295045973</p>
               <p><i class="bi bi-envelope-at"></i> an739796@gmail.com</p>
               <p><i class="bi bi-house"></i> Jl. Terusan Kapten Halim, Salamjaya, Pondoksalam</p>
             </div>
           </div>
-        </section>
-        <!-- Akhir Baris 1 -->
+        </div>
 
-        <!-- Baris 2 -->
-        <section class="baris2">
-          <div class="row justify-content-center">
+        <div class="row justify-content-evenly">
+          <!-- Kolom 1 -->
 
-            <div class="col-md-4">
-              <div class="nama mt-3 te">
-                <h2>Agung Nugraha</h2>
-                <p>Guru Bahasa Inggris</p>
-              </div>
-
-              <div class="tentang position-relative">
-                <hr>
-                <h3>Tentang saya</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, aut voluptatem nemo eos modi
-                  temporibus
-                  ab, dolores laudantium nam nostrum repudiandae hic consequatur? Necessitatibus maiores dignissimos
-                  vel,
-                  debitis porro est.</p>
-              </div>
-
-              <div class="ahli position-relative">
-                <hr>
-                <h3>Keahlian</h3>
-                <ul>
-                  <li>Media Sosial</li>
-                  <li>Baris Berbaris</li>
-                  <li>Desain PicArt</li>
-                  <li>Menggambar</li>
-                </ul>
-              </div>
-
-              <div class="sertifikat position-relative">
-                <hr>
-                <h3>Sertifikat</h3>
-                <h5>Senior Ahli Grafis</h5>
-                <p class="sp">Larana, Inc.</p>
-                <p class="mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, tenetur!</p>
-              </div>
+          <div class="col-md-3">
+            <div class="nama mt-3">
+              <h2>Agung Nugraha</h2>
+              <p>Guru Bahasa Inggris</p>
             </div>
 
-            <div class="col-md-6">
-              <div class="pengalaman position-relative">
-                <hr>
-                <h3>Pengalaman</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, blanditiis in aperiam vero
-                  excepturi ab, quos commodi ut nesciunt fugiat culpa! Voluptate veritatis neque laudantium distinctio
-                  alias sequi quisquam mollitia adipisci, dicta velit est doloremque ipsa quasi officia iste quaerat
-                  laboriosam itaque architecto ipsam vitae harum pariatur unde! Blanditiis, soluta.</p>
-              </div>
+            <div class="tentang position-relative">
+              <hr>
+              <h3>Tentang saya</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, aut voluptatem nemo eos modi
+                temporibus
+                ab, dolores laudantium nam nostrum repudiandae hic consequatur? Necessitatibus maiores dignissimos
+                vel,
+                debitis porro est.</p>
+            </div>
 
-              <div class="pendidikan position-relative">
-                <hr>
-                <h3>Pendidikan</h3>
-                <div class="row">
-                  <div class="col">
-                    <p>2013 - 2015</p>
-                    <p>MAN Purwakarta</p>
-                    <br>
-                    <p>2015-2019</p>
-                    <p>STKIP Subang</p>
-                  </div>
+            <div class="ahli position-relative">
+              <hr>
+              <h3>Keahlian</h3>
+              <ul>
+                <li>Media Sosial</li>
+                <li>Baris Berbaris</li>
+                <li>Desain PicArt</li>
+                <li>Menggambar</li>
+              </ul>
+            </div>
 
-                  <div class="col">
-                    <p>Jurusan</p>
-                    <p>IPA</p>
-                    <br>
-                    <p>S1 Pendidikan</p>
-                    <p>Bahasa Inggris</p>
-                  </div>
+            <div class="sertifikat position-relative">
+              <hr>
+              <h3>Sertifikat</h3>
+              <h5>Senior Ahli Grafis</h5>
+              <p class="sp">Larana, Inc.</p>
+              <p class="mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, tenetur!</p>
+            </div>
+          </div>
+          <!-- Akhir Kolom 1 -->
+
+          <!-- Kolom 2 -->
+
+          <div class="col-md-5">
+            <div class="pengalaman position-relative">
+              <hr>
+              <h3>Pengalaman</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, blanditiis in aperiam vero
+                excepturi ab, quos commodi ut nesciunt fugiat culpa! Voluptate veritatis neque laudantium distinctio
+                alias sequi quisquam mollitia adipisci, dicta velit est doloremque ipsa quasi officia iste quaerat
+                laboriosam itaque architecto ipsam vitae harum pariatur unde! Blanditiis, soluta.</p>
+            </div>
+
+            <div class="pendidikan position-relative">
+              <hr>
+              <h3>Pendidikan</h3>
+              <div class="row">
+                <div class="col">
+                  <p>2013 - 2015</p>
+                  <p>MAN Purwakarta</p>
+                  <br>
+                  <p>2015-2019</p>
+                  <p>STKIP Subang</p>
+                </div>
+
+                <div class="col">
+                  <p>Jurusan</p>
+                  <p>IPA</p>
+                  <br>
+                  <p>S1 Pendidikan</p>
+                  <p>Bahasa Inggris</p>
                 </div>
               </div>
             </div>
           </div>
-        </section>
-        <!-- Akhir Baris 2 -->
-
+          <!-- Akhir Kolom 1 -->
+        </div>
       </div>
     </div>
   </div>
